(home.html)Search with QRCode,  (register)Sign in with existing account

--- a/login.html
+++ b/login.html
@@ -25,6 +25,7 @@
 </head>
 
 <body>
+    <div style="margin: auto">hhhhhhh</div>
     <ons-page>
         <div style="text-align: center; margin-top: 30px;">
             <p>
@@ -81,32 +82,23 @@
             console.log(error.code + ':' + errorMessage);
             ons.notification.alert('Login Failed');
         });
-        modal.show();
     };
 
-    function google() {
+    function google(){
         var provider = new firebase.auth.GoogleAuthProvider();
-        provider.addScope('https://www.googleapis.com/auth/contacts.readonly');
-
-        firebase.auth().signInWithRedirect(provider);
-        firebase.auth().getRedirectResult().then(function (result) {
-            if (result.credential) {
-                // This gives you a Google Access Token. You can use it to access the Google API.
-                var token = result.credential.accessToken;
-                // ...
-            }
+        firebase.auth().signInWithRedirect(provider).then(function() {
+            return firebase.auth().getRedirectResult();
+        }).then(function (result) {
+            // This gives you a Google Access Token.
+            // You can use it to access the Google API.
+            var token = result.credential.accessToken;
             // The signed-in user info.
             var user = result.user;
-            console.log(user);
+            // ...
         }).catch(function (error) {
             // Handle Errors here.
             var errorCode = error.code;
             var errorMessage = error.message;
-            // The email of the user's account used.
-            var email = error.email;
-            // The firebase.auth.AuthCredential type that was used.
-            var credential = error.credential;
-            // ...
         });
         modal.show();
     }
@@ -142,5 +134,6 @@
         }
     });
 </script>
+
 
 </html>
