--- a/register.html
+++ b/register.html
@@ -37,7 +37,9 @@
             <p style="margin-top: 30px;">
                 <ons-button onclick="register()">Sign up for a new user</ons-button>
             </p>
-
+            <p style="margin-top: 30px;">
+                    Already have an account? <a href="login.html">Sign in</a>
+                </p>
         </div>
     </ons-page>
 </body>
