--- a/scan.html
+++ b/scan.html
@@ -24,7 +24,7 @@
                 } else {
                     localStorage.setItem("code", text);
                     QRScanner.hide();
-                    window.location.href = 'index.html';
+                    window.location.href = 'home.html';
                 }
             }
 
