show/hide search not found

--- a/home.html
+++ b/home.html
@@ -147,10 +147,12 @@
 
             <div id="notFound">
                 <ons-list modifier="inset" style="margin: 8px">
-                    <div class="left">
-                        <i class="zmdi zmdi-search zmdi-hc-2x" style="color: rgb(250, 96, 24)"></i>
-                    </div>
-                    <div class="center">We couldn't find any products.</div>
+                        <ons-list-item modifier="longdivider">
+                            <div class="left">
+                                <i class="zmdi zmdi-search zmdi-hc-2x" style="color: rgb(250, 96, 24)"></i>
+                            </div>
+                            <div class="center">We couldn't find any products.</div>
+                        </ons-list-item>
                 </ons-list>
                 <div style="text-align: center; color: rgb(140, 140, 140)"><b>You may also see</b></div>
             </div>
