--- a/home.html
+++ b/home.html
@@ -141,7 +141,7 @@
 
     <template id="tab3.html">
         <ons-page id="Tab3">
-            <section style="padding: 8px">
+            <section style="padding: 8px" id="showAllProduct">
                 <ons-button modifier="large" onclick="getProduct();" style="background-color: rgb(250, 96, 24);">View all products</ons-button>
             </section>
 
@@ -314,14 +314,15 @@
         document.getElementById('tabbar').setActiveTab(2);
     }
 
-    function getProduct(input) {     
+    function getProduct(input) {    
         if(localStorage.getItem("searchNotFound") == "notFound")
-        {
-            $('#notFound').show();
-        } else {
-            $('#notFound').hide();
-        }
+            {
+                $('#notFound').show();
+            } else {
+                $('#notFound').hide();
+            } 
         if (input == null) {
+            $('#showAllProduct').hide();
             var getAllProduct = [];
             allProduct = [];
             console.log('get all product');
@@ -338,6 +339,12 @@
             // localStorage.setItem("array", JSON.stringify(allProduct));
             // console.log(JSON.parse(localStorage.getItem("array"))); 
         } else if (input == 'search'){
+            if(localStorage.getItem("searchNotFound") == "notFound")
+            {
+                $('#showAllProduct').hide();
+            } else {
+                $('#showAllProduct').show();
+            }
             var searchData = [];
             console.log(searchProduct);
             searchProduct.forEach(function(title){                
@@ -353,6 +360,7 @@
                 });
             });
         } else {
+            $('#showAllProduct').show();
             var getCategory = [];
             console.log('view by category: ' + input);
             input = input.toLowerCase();
