--- a/scan.html
+++ b/scan.html
@@ -77,7 +77,26 @@
                     }
                 } else {
                     console.log("Camera status: " + status.currentCamera);
-                
+                    if(status.currentCamera == 0 && camera == 0)
+                    {
+                        QRScanner.useBackCamera(function(err, status){
+                            err && console.error(err);
+                            console.log(status);
+                            camera = 1;
+                        });
+                    }
+                    else if(status.currentCamera == 0 && camera == 1){
+                        QRScanner.useFrontCamera(function(err, status){
+                            err && console.error(err);
+                            console.log(status);
+                        });
+                    }
+                    else if(status.currentCamera == 1 && camera == 1){
+                        QRScanner.useBackCamera(function(err, status){
+                            err && console.error(err);
+                            console.log(status);
+                        });
+                    }
                 }
             });
 
